# salareen-ex05

./: .env-example  .gitignore  README.md  pyproject.toml
data/prompts/: ollama_benchmark_prompt.txt
docs/: PLAN.md  PRD.md  PROMPT_LOG.md  TODO.md
results/: airllm_feasibility_report.json  airllm_feasibility_report.txt  economic_analysis.csv  economic_analysis.json  hardware_snapshot.json  hardware_snapshot.txt  ollama_benchmark_qwen2_5_0_5b.csv  ollama_benchmark_qwen2_5_0_5b.json  ollama_benchmark_qwen2_5_1_5b.csv  ollama_benchmark_qwen2_5_1_5b.json  ollama_benchmark_qwen2_5_3b.csv  ollama_benchmark_qwen2_5_3b.json  ollama_models_list.txt  ollama_process_memory_snapshot.txt  ollama_show_qwen2_5_0_5b.txt  ollama_show_qwen2_5_1_5b.txt  ollama_smoke_test.txt
src/salareen_ex05/: __init__.py  airllm_feasibility.py  costs.py  economic_cli.py  hardware.py  main.py  metrics.py  ollama_benchmark.py  plots.py
tests/: conftest.py  test_airllm_feasibility.py  test_costs.py  test_metrics.py  test_ollama_benchmark.py  test_plots.py  test_project_structure.py
