[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salareen-ex05"
version = "0.1.0"
description = "HW05 — Running a Massive LLM Locally: AirLLM, Quantization, and Performance Benchmarking"
authors = [
    { name = "Saleh Hammam" },
    { name = "Areen Tarabeh" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "psutil>=5.9",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
salareen-ex05 = "salareen_ex05.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/salareen_ex05"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
